# Aetherion

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  vcpkg.json
.github/workflows/: main.yml
include/imgui/backends/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_glfw.cpp  imgui_impl_null.cpp  imgui_impl_null.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
include/tinyexr/: tinyexr.h
src/: CMakeLists.txt  main.cpp
src/private/: tinyexr_impl.cpp
src/private/Core/: Core.cpp  Input.cpp  Time.cpp
src/private/Core/Camera/: Camera.cpp  EditorCamera.cpp
src/private/Core/GameObject/: GameObject.cpp
src/private/Core/GameObject/Components/: Component.cpp  Mesh.cpp
src/private/Core/Renderer/: GPURingBuffer.cpp  MegaBuffer.cpp  MeshUploader.cpp  Renderer.cpp  ResourceManager.cpp  SceneCollector.cpp  Shader.cpp  TextureUploader.cpp  VulkanBuffer.cpp  VulkanRenderer.cpp
src/private/Core/Renderer/Rendering/: DeferredRenderer.cpp  RenderGraph.cpp  RenderGraphBuilder.cpp  RenderGraphContext.cpp  SunExtraction.cpp  TransientResourcePool.cpp
src/private/Core/Renderer/Rendering/GBuffer/: GBufferManager.cpp
src/private/Core/Renderer/Rendering/IBL/: IBLGenerator.cpp
src/private/Core/Renderer/Rendering/Passes/: BentNormalPass.cpp  CullingPass.cpp  GBufferPass.cpp  ImGuiPass.cpp  LightingPass.cpp  ShadowPass.cpp  SkyboxPass.cpp  TonemapPass.cpp
src/private/Core/Renderer/Rendering/Sky/: SkyAtmosphere.cpp
src/private/Core/Renderer/Vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSetLayout.cpp  VulkanDevice.cpp  VulkanFence.cpp  VulkanFramebuffer.cpp  VulkanGraphicsContext.cpp  VulkanImGuiImpl.cpp  VulkanImageView.cpp  VulkanPipeline.cpp  VulkanPipelineLayout.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanRingBuffer.cpp  VulkanSampler.cpp  VulkanSemaphore.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp
src/private/Core/Scene/: Scene.cpp  SceneManager.cpp
src/private/Core/Utils/: ThreadPool.cpp
src/private/Math/: Transform.cpp  Vector3.cpp
src/public/: Utils.h
src/public/Core/: Containers.h  Core.h  Input.h  Logger.h  Time.h
src/public/Core/Camera/: Camera.h  EditorCamera.h
src/public/Core/GameObject/: GameObject.h
src/public/Core/GameObject/Components/: Component.h  Mesh.h
src/public/Core/Renderer/: CommandBuffer.h  CommandPool.h  CubemapUtils.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Device.h  Extent3D.h  Fence.h  Framebuffer.h  GPUBuffer.h  GPUFormat.h  GPURingBuffer.h  GPUTexture.h  GraphicsContext.h  ImGuiImpl.h  ImageView.h  MegaBuffer.h  MeshData.h  MeshUploader.h  Pipeline.h  PipelineLayout.h  PipelineStage.h  Rect2D.h  RenderPass.h  Renderer.h  ResourceManager.h  Sampler.h  SceneCollector.h  Semaphore.h  Shader.h  Swapchain.h  TextureUploader.h  Viewport.h  VulkanBuffer.h  VulkanRenderer.h
src/public/Core/Renderer/Rendering/: DeferredRenderer.h  GraphNode.h  RenderGraph.h  RenderGraphBuilder.h  RenderGraphContext.h  ResourceHandle.h  SunExtraction.h  TransientResourcePool.h
src/public/Core/Renderer/Rendering/GBuffer/: GBufferLayout.h  GBufferManager.h
src/public/Core/Renderer/Rendering/IBL/: IBLGenerator.h
src/public/Core/Renderer/Rendering/Passes/: BasePass.h  BentNormalPass.h  CullingPass.h  GBufferPass.h  ImGuiPass.h  LightingPass.h  ShadowPass.h  SkyboxPass.h  TonemapPass.h
src/public/Core/Renderer/Rendering/Sky/: SkyAtmosphere.h
src/public/Core/Renderer/Vulkan/: VulkanBuffer.h  VulkanCommandBuffer.h  VulkanCommandPool.h  VulkanDescriptorPool.h  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.h  VulkanDevice.h  VulkanFence.h  VulkanFramebuffer.h  VulkanGraphicsContext.h  VulkanHelpers.h  VulkanImGuiImpl.h  VulkanImageView.h  VulkanPipeline.h  VulkanPipelineLayout.h  VulkanRenderPass.h  VulkanRenderer.h  VulkanRingBuffer.h  VulkanSampler.h  VulkanSemaphore.h  VulkanSwapchain.h  VulkanTexture.h
src/public/Core/Scene/: Scene.h  SceneManager.h
src/public/Core/Utils/: ThreadPool.h
src/public/Fonts/: RobotoRegular.h
src/public/Math/: Transform.h  Vector3.h
src/shaders/: BRDFIntegration.frag  BRDFIntegration.vert  BentNormal.frag  BentNormal.vert  GBufferPass.frag  GBufferPass.vert  GPUCulling.comp  IrradianceConvolution.frag  IrradianceConvolution.vert  LightingPass.frag  LightingPass.vert  PrefilterEnvMap.frag  PrefilterEnvMap.vert  ShadowPass.vert  SkyAtmosphere.frag  SkyAtmosphere.vert  SkyboxPass.frag  SunExtraction.comp  TonemapPass.frag  TonemapPass.vert  shader.frag  shader.vert
